--- a/Implementation/WebTier/WebContent/JavaScript/Source/Internationalization/LocaleTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Internationalization/LocaleTest.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <title>Test page for Locale.js</title>
+	<META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=8"/>
+	
+	<link rel="stylesheet" type="text/css" href="../JsUnit/css/jsUnitStyle.css">
+	
+	<script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
 
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
-    <script type="text/javascript"  src="../JsUnit/app/jsUnitCore.js"></script>
-    <script type="text/javascript"  src="../MooTools/mootools-core-1.3.js"></script>
-
-    <script type="text/javascript"  src="../CommonScripts/AssertUtil.js"></script>
-    <script type="text/javascript"  src="../CommonScripts/UserException.js"></script>
+	<script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
+	
     <script type="text/javascript"  src="../FundamentalTypes/StringTokenizer.js"></script>
     <script type="text/javascript"  src="../Internationalization/Locale.js"></script>
 
