LocaleUser now uses JsHamcrest and String instead of StringBuffer and LocaleUtileTest.html coreccted to the new filder structure.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/Internationalization/LocaleUtilTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Internationalization/LocaleUtilTest.html
@@ -64,7 +64,7 @@
 		//runs a test function during debugging
 		function runTestFunction(){
 			setUp();
-		    testSplitName();
+			testGetFileName_ForLanguageOnly();
 			tearDown();
 		}
     </script>
