--- a/Implementation/WebTier/WebContent/JavaScript/Source/Internationalization/ResourceKeyTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Internationalization/ResourceKeyTest.html
@@ -4,22 +4,24 @@
 <head>
 	<title>Test page for ResourceKeyTest.js</title>
 	<META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+	<meta http-equiv="X-UA-Compatible" content="IE=8"/>
+	
 	<link rel="stylesheet" type="text/css" href="../JsUnit/css/jsUnitStyle.css">
+	<script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>    
+	
+	<script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
+	<script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
 
-    <script type="text/javascript" src="../MooTools/mootools-core-1.3.js"></script>
-    
-    <script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
-
-	<script language="JavaScript" src="../CommonScripts/AssertUtil.js"></script>
 	<script language="JavaScript" src="../FundamentalTypes/JavaCompatibility.js"></script>
-	<script language="JavaScript" src="ResourceKey.js"></script>
+	<script language="JavaScript" src="../Internationalization/ResourceKey.js"></script>
 	
     <script type="text/javascript" >
 		window.addEvent('domready', function() {
 			runTestFunction();
 		});
   	
+		JsHamcrest.Integration.JsUnit();
+		
 		function setUp(){}
 
 		function tearDown(){}
