--- a/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
@@ -14,13 +14,13 @@
 	<script language="JavaScript">
 		function suite() {
 		  var newsuite = new top.jsUnitTestSuite();
-//		  newsuite.addTestPage("../BrowserWidget/BrowserWidgetTest.html");
+		  newsuite.addTestPage("../BrowserWidget/BrowserWidgetTest.html");
 //		  newsuite.addTestPage("../CommonScripts/CommonScriptsTestSuite.html");
 //		  newsuite.addTestPage("../ComponentStateManager/ComponentStateManagerTest.html");
 //		  newsuite.addTestPage("../DesktopConfigurator/DesktopConfiguratorTest.html");
 		  newsuite.addTestPage("../FundamentalTypes/FundamentalTypesTestSuite.html");
 //		  newsuite.addTestPage("../HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html");
-//		  newsuite.addTestPage("../Internationalization/InternalizationTestSuite.html");
+		  newsuite.addTestPage("../Internationalization/InternalizationTestSuite.html");
 //		  newsuite.addTestPage("../LanguageSelectorWidget/LanguageSelectorWidgetTest.html");
 //		  newsuite.addTestPage("../SkinSelectorWidget/SkinSelectorWidgetTest.html");
 //		  newsuite.addTestPage("../Singleton/SingletonTest.html");
