--- a/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
@@ -16,7 +16,7 @@
 		  var newsuite = new top.jsUnitTestSuite();
 		  newsuite.addTestPage("../BrowserWidget/BrowserWidgetTest.html");
 //		  newsuite.addTestPage("../CommonScripts/CommonScriptsTestSuite.html");
-//		  newsuite.addTestPage("../ComponentStateManager/ComponentStateManagerTest.html");
+		  newsuite.addTestPage("../ComponentStateManager/ComponentStateManagerTest.html");
 //		  newsuite.addTestPage("../DesktopConfigurator/DesktopConfiguratorTest.html");
 		  newsuite.addTestPage("../FundamentalTypes/FundamentalTypesTestSuite.html");
 //		  newsuite.addTestPage("../HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html");
@@ -27,7 +27,7 @@
 //		  newsuite.addTestPage("../TabWidget/TabWidgetTestSuite.html");
 //		  newsuite.addTestPage("../WebUIConfiguration/WebUIConfigurationTest.html");
 //		  newsuite.addTestPage("../WebUIController/WebUIControllerTest.html");
-//		  newsuite.addTestPage("../WebUILogger/WebUILoggerTest.html");
+		  newsuite.addTestPage("../WebUILogger/WebUILoggerTest.html");
 //		  newsuite.addTestPage("../WebUIMessageBus/WebUIMessageBusTest.html");
 		  return newsuite;
 		}
