--- a/Implementation/WebTier/WebContent/JavaScript/Source/WebUILogger/WebUILoggerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/WebUILogger/WebUILoggerTest.html
@@ -16,6 +16,8 @@
 
 	<script type="text/javascript" src="../Singleton/Singleton.js"></script>
     <script type="text/javascript" src="../FundamentalTypes/HashMap.js"></script>
+    <script type="text/javascript" src="../FundamentalTypes/WebUIException.js"></script>
+    <script type="text/javascript" src="../FundamentalTypes/IllegalArgumentException.js"></script>
     <script type="text/javascript" src="../FundamentalTypes/JavaCompatibility.js"></script>
     <script type="text/javascript" src="../FundamentalTypes/XmlResource.js"></script>
     <script type="text/javascript" src="../WebUIConfiguration/WebUIConfiguration.js"></script>
