--- a/Implementation/WebTier/WebContent/JavaScript/Source/BrowserWidget/BrowserWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/BrowserWidget/BrowserWidgetTest.html
@@ -34,6 +34,8 @@
 	<script type="text/javascript" src="../FundamentalTypes/ArrayList.js"></script>
 	<script type="text/javascript" src="../FundamentalTypes/HashMap.js"></script>
 	<script type="text/javascript" src="../FundamentalTypes/JavaCompatibility.js"></script>
+    <script type="text/javascript" src="../FundamentalTypes/WebUIException.js"></script>
+    <script type="text/javascript" src="../FundamentalTypes/IllegalArgumentException.js"></script>
 	<script type="text/javascript" src="../FundamentalTypes/XmlResource.js"></script>
 	<script type="text/javascript" src="../Internationalization/Locale.js"></script>
 	<script type="text/javascript" src="../Internationalization/LocaleUtil.js"></script>
@@ -48,7 +50,6 @@
 	<script type="text/javascript" src="../WebUIMessageBus/TestMessageTwo.js"></script>
 	<script type="text/javascript" src="../WebUIMessageBus/WebUIMessage.js"></script> 
 	<script type="text/javascript" src="../WebUIMessageBus/WebUIMessageBus.js"></script> 
-	
 
     <script type="text/javascript">
       window.addEvent('domready', function() {
