--- a/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
@@ -15,7 +15,6 @@
 		function suite() {
 		  var newsuite = new top.jsUnitTestSuite();
 		  newsuite.addTestPage("../BrowserWidget/BrowserWidgetTest.html");
-//		  newsuite.addTestPage("../CommonScripts/CommonScriptsTestSuite.html");
 		  newsuite.addTestPage("../ComponentStateManager/ComponentStateManagerTest.html");
 //		  newsuite.addTestPage("../DesktopConfigurator/DesktopConfiguratorTest.html");
 		  newsuite.addTestPage("../FundamentalTypes/FundamentalTypesTestSuite.html");
@@ -25,10 +24,10 @@
 //		  newsuite.addTestPage("../SkinSelectorWidget/SkinSelectorWidgetTest.html");
 //		  newsuite.addTestPage("../Singleton/SingletonTest.html");
 //		  newsuite.addTestPage("../TabWidget/TabWidgetTestSuite.html");
-//		  newsuite.addTestPage("../WebUIConfiguration/WebUIConfigurationTest.html");
+		  newsuite.addTestPage("../WebUIConfiguration/WebUIConfigurationTest.html");
 //		  newsuite.addTestPage("../WebUIController/WebUIControllerTest.html");
 		  newsuite.addTestPage("../WebUILogger/WebUILoggerTest.html");
-//		  newsuite.addTestPage("../WebUIMessageBus/WebUIMessageBusTest.html");
+		  newsuite.addTestPage("../WebUIMessageBus/WebUIMessageBusTest.html");
 		  return newsuite;
 		}
 	</script>
