Upgrade to MooTools 1.4

--- a/Implementation/WebTier/WebContent/JavaScript/Source/LanguageSelectorWidget/LanguageSelectorWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/LanguageSelectorWidget/LanguageSelectorWidgetTest.html
@@ -9,8 +9,8 @@
    <script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
    
    <script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
-   <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
-   <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.3.js"></script>
+   <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
+   <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
    <script type="text/javascript" src="../../Libraries/Log4JavaScript/log4javascript.js"></script>
