--- a/Implementation/WebTier/WebContent/JavaScript/Source/WebUIController/WebUIControllerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/WebUIController/WebUIControllerTest.html
@@ -17,8 +17,8 @@
    
    <script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
    <script type="text/javascript" src="../../Libraries/Log4JavaScript/log4javascript.js"></script>
-   <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
-   <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.3.js"></script>
+   <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
+   <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
    <script type="text/javascript" src="../../Libraries/MochaUI/Core.js"></script>
    <script type="text/javascript" src="../../Libraries/MochaUI/Dock.js"></script>
    <script type="text/javascript" src="../../Libraries/MochaUI/Layout.js"></script>
