--- a/Implementation/WebTier/WebContent/JavaScript/Source/WebUIMessageBus/WebUIMessageBusTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/WebUIMessageBus/WebUIMessageBusTest.html
@@ -8,7 +8,7 @@
    <link type="text/css" rel="stylesheet" href="../JsUnit/app/css/jsUnitStyle.css">
    <script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
    
-   <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
+   <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
    <script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
 
    <script type="text/javascript" src="../Singleton/Singleton.js"></script>
