--- a/Implementation/WebTier/WebContent/JavaScript/Source/DesktopConfigurator/PanelInterpreterTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/DesktopConfigurator/PanelInterpreterTest.html
@@ -8,7 +8,7 @@
    <script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
    
    <script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
-   <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>   
+   <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
     
@@ -45,7 +45,7 @@
       //VERIFY:
       assertTrue( panelInterpreter.getHeaderToolBox() );
       assertEquals( 'function', typeOf( panelInterpreter.getHeaderToolBoxOnLoad() ));
-      assertEquals( 'EmptyToolboxContent.html', panelInterpreter.getHeaderToolBoxURL() );
+      assertEquals( '../DesktopConfigurator/EmptyToolboxContent.html', panelInterpreter.getHeaderToolBoxURL() );
    }
       
    //runs a test function during debugging
