--- a/Implementation/WebTier/WebContent/JavaScript/Source/DocumentManager/DocumentManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/DocumentManager/DocumentManagerTest.html
@@ -1,11 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Test page for DocumentManager.js</title>
-
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
-   <link type="text/css" rel="stylesheet" href="../JsUnit/app/css/jsUnitStyle.css">
+	<title>Test page for DocumentManager.js</title>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<link type="text/css" rel="stylesheet" href="../JsUnit/app/css/jsUnitStyle.css">
 
 	<!--[if IE]>
 	    <script type="text/javascript" src="../../Libraries/MochaUI/excanvas.js"></script>
@@ -13,8 +11,8 @@
     
     <script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
     <script type="text/javascript" src="../../Libraries/Log4JavaScript/log4javascript.js"></script>
-    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
-    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.3.js"></script>
+    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
+    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
     <script type="text/javascript" src="../../Libraries/MochaUI/Core.js"></script>
     <script type="text/javascript" src="../../Libraries/MochaUI/Dock.js"></script>
     <script type="text/javascript" src="../../Libraries/MochaUI/Layout.js"></script>
