--- a/Implementation/WebTier/WebContent/JavaScript/Source/FundamentalTypes/ArrayListTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/FundamentalTypes/ArrayListTest.html
@@ -8,7 +8,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="../JsUnit/css/jsUnitStyle.css">
 	
-	<script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
+    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
 	<script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
 	
 	<script language="JavaScript" src="../FundamentalTypes/ArrayList.js"></script>
