--- a/Implementation/WebTier/WebContent/JavaScript/Source/FundamentalTypes/JavaCompatibilityTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/FundamentalTypes/JavaCompatibilityTest.html
@@ -10,7 +10,7 @@
 
     <script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
 
-    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
+    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
     
 	<script language="JavaScript" src="../FundamentalTypes/JavaCompatibility.js"></script>
     <script type="text/javascript" src="JavaCompatibility.js"></script>
