--- a/Implementation/WebTier/WebContent/JavaScript/Source/Internationalization/XMLBundleParserTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Internationalization/XMLBundleParserTest.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="../JsUnit/css/jsUnitStyle.css">
 	<script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>    
 	
-	<script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
+    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
 	<script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
 	<script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
     <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
