--- a/Implementation/WebTier/WebContent/JavaScript/Source/Singleton/SingletonTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Singleton/SingletonTest.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Singleton.js test</title>
 	
-	<link rel="stylesheet" type="text/css" href="../JsUnit/css/jsUnitStyle.css">
+	<link type="text/css" rel="stylesheet" href="../JsUnit/css/jsUnitStyle.css"></link>
     <script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>
 
-	<script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
+    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
     <script type="text/javascript" src="../Singleton/Singleton.js"></script>
     
     <script type="text/javascript" >
