--- a/Implementation/WebTier/WebContent/JavaScript/Source/WebUIConfiguration/WebUIConfigurationTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/WebUIConfiguration/WebUIConfigurationTest.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="../JsUnit/css/jsUnitStyle.css">
 	<script type="text/javascript" src="../JsUnit/app/jsUnitCore.js"></script>    
 	
-	<script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.3.js"></script>
+    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
 	<script type="text/javascript" src="../../Libraries/JsHamcrest/jshamcrest.js"></script>
 	<script type="text/javascript" src="../../Libraries/Log4JavaScript/log4javascript.js"></script>
 	<script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
