--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -11,8 +11,8 @@
     
 	<script type="text/javascript" src="JavaScript/Libraries/JsHamcrest/jshamcrest.js"></script>
     <script type="text/javascript" src="JavaScript/Libraries/Log4JavaScript/log4javascript.js"></script>
-    <script type="text/javascript" src="JavaScript/Libraries/MooTools/mootools-core-1.3.js"></script>
-    <script type="text/javascript" src="JavaScript/Libraries/MooTools/mootools-more-1.3.js"></script>    
+    <script type="text/javascript" src="JavaScript/Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
+    <script type="text/javascript" src="JavaScript/Libraries/MooTools/mootools-more-1.4.0.1.js"></script>    
     <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Core.js"></script>
     <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Dock.js"></script>
     <script type="text/javascript" src="JavaScript/Libraries/MochaUI/Layout.js"></script>
