Harmonize logging messages.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/DocumentManager/DocumentManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/DocumentManager/DocumentManagerTest.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="../../Libraries/MochaUI/Tabs.js"></script>
     <script type="text/javascript" src="../../Libraries/MochaUI/Window.js"></script>
     <script type="text/javascript" src="../../Libraries/MochaUI/Modal.js"></script>
+    <script type="text/javascript" src="../../Libraries/RemoteStyleSheet/RemoteStyleSheet.js"></script>
 	<script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
     <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
 	<script type="text/javascript" src="../../Libraries/XMLforScript/xmlIO.js"></script>
@@ -35,6 +36,7 @@
 	<script type="text/javascript" src="../FundamentalTypes/StringTokenizer.js"></script>
 	<script type="text/javascript" src="../ComponentStateManager/DefaultStateUriTransformer.js"></script>
 	<script type="text/javascript" src="../ComponentStateManager/ComponentStateManager.js"></script>
+    <script type="text/javascript" src="../DesktopConfigurator/ConfigurationTimeoutException.js"></script>
     <script type="text/javascript" src="../DesktopConfigurator/DesktopConfigurator.js"></script>
     <script type="text/javascript" src="../DesktopConfigurator/DesktopStructure.js"></script>
     <script type="text/javascript" src="../DesktopConfigurator/PanelInterpreter.js"></script>
