--- a/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/TestSuite.html
@@ -23,8 +23,10 @@
 		  newsuite.addTestPage("../HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html");
 		  newsuite.addTestPage("../Internationalization/InternalizationTestSuite.html");
 		  newsuite.addTestPage("../LanguageSelectorWidget/LanguageSelectorWidgetTest.html");
+		  newsuite.addTestPage("../NewsReaderWidget/NewsReaderWidgetTestSuite.html");
 		  newsuite.addTestPage("../Singleton/SingletonTest.html");
 		  newsuite.addTestPage("../SkinSelectorWidget/SkinSelectorWidgetTest.html");
+		  newsuite.addTestPage("../SmartDocument/SmartDocumentTestSuite.html");
 		  newsuite.addTestPage("../TabWidget/TabWidgetTestSuite.html");
 		  newsuite.addTestPage("../WebUIConfiguration/WebUIConfigurationTest.html");
 		  newsuite.addTestPage("../WebUIController/WebUIControllerTest.html");
