DesktopConfigurator now uses DocumentResources, to handle resource files.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/SmartDocumentTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/SmartDocumentTestSuite.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-	<title>NewsReader Test Suite</title>
+	<title>SmartDocument Test Suite</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=8"/>
 	
