--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -55,6 +55,18 @@
 	<script type="text/javascript" src="JavaScript/Source/Internationalization/XMLResourceBundle.js"></script>
 	<script type="text/javascript" src="JavaScript/Source/LanguageSelectorWidget/LanguageChangedMessage.js"></script>
 	<script type="text/javascript" src="JavaScript/Source/LanguageSelectorWidget/LanguageSelectorWidget.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentResource.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentResources.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElement.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementFactory.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/CompositeDocumentElement.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentBody.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentFooter.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentHeader.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentImage.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentScript.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentStyleSheet.js"></script>
+	<script type="text/javascript" src="JavaScript/Source/SmartDocument/SmartDocument.js"></script>
     <script type="text/javascript" src="JavaScript/Source/SkinSelectorWidget/SkinChangedMessage.js"></script>
     <script type="text/javascript" src="JavaScript/Source/SkinSelectorWidget/SkinSelectorWidget.js"></script>
 	<script type="text/javascript" src="JavaScript/Source/TabWidget/DuplicatedTabException.js"></script>
