BrowserWidget's element creation methods refactored to WidgetElementFactory.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopTestSuite.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-	<title>SmartDocument Test Suite</title>
+	<title>Desktop Test Suite</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=8"/>
 	
@@ -28,8 +28,8 @@
   </head>
 
   <body>
-    <h1>SmartDocument Test Suite</h1>
+    <h1>Desktop Test Suite</h1>
 
-    <p>This page contains a suite of tests for&nbsp;'SmartDocument' testing.</p>
+    <p>This page contains a suite of tests for 'Desktop' testing.</p>
   </body>
 </html>
