--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -22,6 +22,11 @@
    <script type="text/javascript" src="JavaScript/Libraries/RemoteStyleSheet/RemoteStyleSheet.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/Sarissa/sarissa.js"></script>  
    <script type="text/javascript" src="JavaScript/Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>  
+   <script type="text/javascript" src="JavaScript/Libraries/SlideShow/slideshow.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/SlideShow/slideshow.flash.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/SlideShow/slideshow.fold.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/SlideShow/slideshow.kenburns.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/SlideShow/slideshow.push.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/xmlIO.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/xmlEscape.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/xmlsax.js"></script>
@@ -72,6 +77,8 @@
    <script type="text/javascript" src="JavaScript/Source/Internationalization/XMLResourceBundle.js"></script>
    <script type="text/javascript" src="JavaScript/Source/LanguageSelectorWidget/LanguageChangedMessage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/LanguageSelectorWidget/LanguageSelectorWidget.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/PhotoGaleryWidget/PhotoGaleryImage.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/PhotoGaleryWidget/PhotoGaleryWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/ResourceManager.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentImage.js"></script>
