--- a/Implementation/WebTier/WebContent/JavaScript/Source/ToolBarWidget/ToolBarWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/ToolBarWidget/ToolBarWidgetTest.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-   <title>Test page for ToolBar.js</title>
+   <title>Test page for ToolBarWidget.js</title>
    <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=8"/>
 
@@ -150,8 +149,8 @@
 </head>
 
 <body>
-   <h1>ToolBar.js test page</H1>
-   <p>This page contains tests for ToolBar.js JavaScript class.</P>
+   <h1>ToolBarWidget.js test page</H1>
+   <p>This page contains tests for ToolBarWidget.js JavaScript class.</P>
    <div id="ToolBarContainer"></div>
 </body>
 </html>
